--- a/templates/educations/index.html.twig
+++ b/templates/educations/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello EducationsController!{% endblock %}
+{% block title %}Educations{% endblock %}
 
 {% block body %}
 <style>
