--- a/templates/experiences/index.html.twig
+++ b/templates/experiences/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ExperiencesController!{% endblock %}
+{% block title %}Experiences{% endblock %}
 
 {% block body %}
 <style>
