--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -7,30 +7,29 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto navbar-right">
-        {# <li class="nav-item m-x-1">
-          <a class="nav-link" href="{{path("index")}}">Portfolio</a>
-        </li> #}
         <li class="nav-item m-x-1">
-          <span class="nav-link">Accueil</span>
+          <a class="nav-link" href="{{path("app_home")}}">Accueil</a>
         </li>
         <li class="nav-item m-x-1">
-          <span class="nav-link">A propos</span>
+          <a class="nav-link" href="{{path("app_about")}}">A propos</a>
         </li>
         <li class="nav-item m-x-1">
-          <span class="nav-link">Contact</span>
+          <a class="nav-link" href="{{path("app_contact")}}">Contact</a>
         </li>
         <li class="nav-item m-x-1">
-          <span class="nav-link">Blog</span>
+          <a class="nav-link" href="{{path("app_blogs")}}">Blog</a>
         </li>
         <li class="nav-item m-x-1">
-          <span class="nav-link">Skills</span>
+          <a class="nav-link" href="{{path("app_skills")}}">Skills</a>
         </li>
         <li class="nav-item m-x-1">
-          <span class="nav-link">Experiences</span>
+          <a class="nav-link" href="{{path("app_experiences")}}">Experiences</a>
         </li>
         <li class="nav-item m-x-1">
-          <sapn class="nav-link">Educations</sapn>
+          <a class="nav-link" href="{{path("app_educations")}}">Educations</a>
         </li>
+        <li class="nav-item m-x-1">
+          <a class="nav-link" href="{{path("app_projects")}}">Projets</a>
       </ul>
     </div>
   </nav>
