--- a/templates/skills/index.html.twig
+++ b/templates/skills/index.html.twig
@@ -1,20 +1,97 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello SkillsController!{% endblock %}
+{% block title %}Skills{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+<h4>Langages</h4>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/noureddine/portfilio/src/Controller/SkillsController.php'|file_link(0) }}">src/Controller/SkillsController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/noureddine/portfilio/templates/skills/index.html.twig'|file_link(0) }}">templates/skills/index.html.twig</a></code></li>
-    </ul>
-</div>
+  <ul class="skills-list row justify-content-center">
+    <li class="col-4 col-sm-2">
+      <a href="https://developer.mozilla.org/en/docs/Web/HTML" target="_blank">
+        <img class="img-fluid" src="{{asset("/img/icones/html.png")}}" alt="icone html">
+      </a>
+    </li>
+    <li class="col-4 col-sm-2">
+      <a href="https://developer.mozilla.org/en/docs/Web/CSS" target="_blank">
+        <img class="img-fluid" src="{{asset("/img/icones/css.png")}}" alt="icone css">
+      </a>
+    </li>
+    <li class="col-4 col-sm-2">
+      <a href="https://developer.mozilla.org/en/docs/Web/JavaScript" target="_blank">
+        <img class="img-fluid" src="{{asset("/img/icones/js.png")}}" alt="icone js">
+      </a>
+    </li>
+    <li class="col-4 col-sm-2">
+      <a href="https://www.php.net/" target="_blank">
+        <img class="img-fluid" src="{{asset("/img/icones/php.png")}}" alt="icone php">
+      </a>
+    </li>
+    <li class="col-4 col-sm-2">
+      <a href="https://fr.wikipedia.org/wiki/Structured_Query_Language" target="_blank">
+        <img class="img-fluid" src="{{asset("/img/icones/sql.png")}}" alt="icone sql">
+      </a>
+    </li>
+    <li class="col-4 col-sm-2">
+      <a href="https://www.python.org/" target="_blank">
+        <img class="img-fluid" src="{{asset("/img/icones/python.png")}}" alt="icone python">
+      </a>
+    </li>
+  </ul>
+
+  <h4>Technologies</h4>
+
+  <ul class="skills-list row justify-content-center">
+    <li class="col-4 col-sm-2">
+      <a href="https://git-scm.com/" target="_blank">
+        <img class="img-fluid" src="{{asset("/img/icones/git.png")}}" alt="icone git">
+      </a>
+    </li>
+    <li class="col-4 col-sm-2">
+      <a href="https://getbootstrap.com/" target="_blank">
+        <img class="img-fluid svg" src="{{asset("/img/icones/bootstrap.png")}}" alt="icone bootstrap">
+      </a>
+    </li>
+    <li class="col-4 col-sm-2">
+      <a href="https://jquery.com/" target="_blank">
+        <img class="img-fluid" src="{{asset("/img/icones/jquery.png")}}" alt="icone jquery">
+      </a>
+    </li>
+    <li class="col-4 col-sm-2">
+      <a href="https://angular.io/" target="_blank">
+        <img class="img-fluid" src="{{asset("/img/icones/angular.png")}}" alt="icone angular">
+      </a>
+    </li>
+    <li class="col-4 col-sm-2">
+      <a href="https://symfony.com/" target="_blank">
+        <img class="img-fluid" src="{{asset("/img/icones/symfony.png")}}" alt="icone symfony">
+      </a>
+    </li>
+    <li class="col-4 col-sm-2">
+      <a href="https://www.djangoproject.com/" target="_blank">
+        <img class="img-fluid" src="{{asset("/img/icones/django.png")}}" alt="icone django">
+      </a>
+    </li>
+    <li class="col-4 col-sm-2">
+      <a href="https://www.mysql.com/fr/" target="_blank">
+        <img class="img-fluid" src="{{asset("/img/icones/mysql.png")}}" alt="icone mysql">
+      </a>
+    </li>
+    <li class="col-4 col-sm-2">
+      <a href="https://www.postgresql.org/" target="_blank">
+        <img class="img-fluid" src="{{asset("/img/icones/postgresql.png")}}" alt="icone postgresql">
+      </a>
+    </li>
+    <li class="col-4 col-sm-2">
+      <a href="https://wordpress.com/" target="_blank">
+        <img class="img-fluid" src="{{asset("/img/icones/wordpress.png")}}" alt="icone wordpress">
+      </a>
+    </li>
+    <li class="col-4 col-sm-2">
+      <a href="https://www.linux.org/" target="_blank">
+        <img class="img-fluid" src="{{asset("/img/icones/linux.png")}}" alt="icone linux">
+      </a>
+    </li>
+  </ul>
+
 {% endblock %}
